
public interface IDamageable
{
    public void TakeDamage(int damageAmount);
}